--- a/index.html
+++ b/index.html
@@ -1,22 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-      <link href="style.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Список на тиждень</title>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div>
+      <h3>Monday</h3>
+      <ol>
+        <li>Укр.мова</li>
+        <li>Математика</li>
+        <li>Математика</li>
+        <li>Укр.літ</li>
+        <li>Зарубіжна</li>
+        <li>Історія</li>
+        <li>Фізична</li>
+      </ol>
 
-</head>
-<body>
-    <div class="text-box">
-  <h3>Пофарбуйте мене в рожевий колір (color:pink).</h3>
-  <p>Даний елемент має залишитись неоформленим.</p>
-  <p id="greycol">Пофарбуйте мене в сірий колір (color:grey).</p>
-  <div>Даний елемент має залишитись неоформленим.</div>
-  <div><p>Пофарбуйте мене в червоний колір (color:red).</p></div>
-  <h3>Даний елемент має залишитись неоформленим.</h3>
-  <p>Пофарбуйте мене в зелений колір (color:green).</p>
-  <p class="yellow">Пофарбуйте мене в жовтий колір (color:yellow).</p>
-</div>
-</body>
+      <h3>Tuesday</h3>
+      <ol>
+        <li>Природа</li>
+        <li>Фізична</li>
+        <li>Математика</li>
+        <li>Географія</li>
+        <li>Укр.мова</li>
+        <li>Музика</li>
+      </ol>
+      <h3>Wednesday</h3>
+      <ol>
+        <li>Основи.здоров'я</li>
+        <li>Англ.мова</li>
+        <li>Англ.літ</li>
+        <li>Матем</li>
+        <li>Музика</li>
+        <li>Укр.мова</li>
+      </ol>
+      <h3>Thursday</h3>
+      <ol>
+        <li>Англ.літ</li>
+        <li>Англ.мова</li>
+        <li>Матем</li>
+        <li>Укр.мова</li>
+        <li>Трудове Навчання</li>
+        <li>Географія</li>
+      </ol>
+
+      <h3>Friday</h3>
+      <ol>
+        <li>Математика</li>
+        <li>Математика</li>
+        <li>Основи Здоров'я</li>
+        <li>Укр.мова</li>
+        <li>Англ.мова</li>
+        <li>Зарубіжна Література</li>
+        <li>Фізична Культура</li>
+      </ol>
+    </div>
+  </body>
 </html>
